lab3/src/main/java/com/github/smirnovdm2107/parser/JavaParser.java
// Generated from Java.g4 by ANTLR 4.7.2
package com.github.smirnovdm2107.parser;

import java.util.*;
import java.util.stream.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JavaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, DOUBLE_QUOTE=2, RETURN=3, POINT=4, NUM=5, TRUE=6, FALSE=7, DEC=8, 
		INC=9, MATH_SYMBOL=10, ELSE=11, IF=12, EQ=13, CLASS=14, IMPORT=15, STATIC=16, 
		LBRACE=17, RBRACE=18, LBRACKET=19, RBRACKET=20, LPARENT=21, RPARENT=22, 
		ELLIPSIS=23, COMMA=24, ID=25, SEMICOLON=26, WHITESPACE=27, NOT_DOUBLE_QUOTE=28;
	public static final int
		RULE_program = 0, RULE_importStatement = 1, RULE_importPath = 2, RULE_function = 3, 
		RULE_statementBlock = 4, RULE_functionArgs = 5, RULE_functionArg = 6, 
		RULE_varArg = 7, RULE_functionBody = 8, RULE_expression = 9, RULE_notMathExpression = 10, 
		RULE_string = 11, RULE_returnStatement = 12, RULE_math = 13, RULE_functionCall = 14, 
		RULE_statement = 15, RULE_condition = 16, RULE_assignation = 17, RULE_declaration = 18, 
		RULE_obfusedId = 19, RULE_type = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "importStatement", "importPath", "function", "statementBlock", 
			"functionArgs", "functionArg", "varArg", "functionBody", "expression", 
			"notMathExpression", "string", "returnStatement", "math", "functionCall", 
			"statement", "condition", "assignation", "declaration", "obfusedId", 
			"type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'*'", "'\"'", "'return'", "'.'", null, "'false'", "'true'", "'--'", 
			"'++'", null, "'else'", "'if'", "'='", "'class'", "'import'", "'static'", 
			"'{'", "'}'", "'['", "']'", "'('", "')'", "'...'", "','", null, "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "DOUBLE_QUOTE", "RETURN", "POINT", "NUM", "TRUE", "FALSE", 
			"DEC", "INC", "MATH_SYMBOL", "ELSE", "IF", "EQ", "CLASS", "IMPORT", "STATIC", 
			"LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "LPARENT", "RPARENT", "ELLIPSIS", 
			"COMMA", "ID", "SEMICOLON", "WHITESPACE", "NOT_DOUBLE_QUOTE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Java.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    final List<Map<String, String>> scopes = new ArrayList<>();
	    final StringBuilder sb = new StringBuilder();
	    final static char[] OBFUSED_ID_CHARACTERS = new char[]{'1', '0', 'I', 'O'};
	    final static char[] OBFUSED_ID_FIRST_CHARACTERS = new char[]{'I', 'O'};
	    final static String[] OBFUSING_NAMES = new String[]{
	        "ABOBA",
	        "amogus",
	        "abobus",
	        "sus",
	        "Mitrolius", "got_over", "Anna",
	        "MrWrld",
	        "viphwydon",
	        "MrHeap",
	        "paVlaDog",
	        "nikitaSGirfriendCount"
	    };
	    final static int MAX_OBFUSED_ID_LENGTH = 10;
	    final static int MAX_OBFUSCATIONS = 4;
	    final static int MAX_USELESS_STATEMENTS = 10;
	    final static String TAB = "    ";
	    final static String[] MATH_OPS = new String[] { "*" , "/", "+", "-" };

	    void newScope() {
	        scopes.add(new HashMap());
	    }

	    void endScope() {
	        scopes.remove(scopes.size() - 1);
	    }

	    void addLine(final String line) {
	        sb.append(format(line)).append(System.lineSeparator());
	    }

	    void add(final String string) {
	        sb.append(string);
	    }

	    void newLine() {
	        sb.append(System.lineSeparator());
	    }

	    String addObfused(final String key) {
	        final int maxIndex = scopes.size() - 1;
	        int index = maxIndex;
	        while (index > 0) {
	            final String value = scopes.get(index).get(key);
	            if (value != null) {
	                return value;
	            }
	            index--;
	        }
	        final String name = randomName();
	        scopes.get(maxIndex).put(key, name);
	        return name;
	    }

	    void addPure(final String key) {
	        scopes.get(scopes.size() - 1).put(key, key);
	    }

	    String obfuseId(final String key) {
	        final String obfused = randomName();
	        scopes.get(scopes.size() - 1).put(key, obfused);
	        return obfused;
	    }

	    void obfuscate() {
	        final Random random = new Random();
	        for (int i = 0; i < random.nextInt(MAX_OBFUSCATIONS); i++) {
	            if (Math.random() > 0.5) {
	                ifBlock();
	            } else {
	                uselessScope();
	            }
	        }
	    }

	    void ifBlock() {
	        final String value = Math.random() > 0.5 ? "false" : "true";
	        uselessScope("if (" + value + ") ");
	    }

	    void uselessScope() {
	        uselessScope("");
	    }

	    void uselessScope(final String prefix) {
	        addLine(prefix + "{");
	        newScope();
	        uselessStatements();
	        endScope();
	        addLine("}");
	    }

	    void uselessStatements() {
	        final int maxStatementParts = 10;
	        final Random random = new Random();
	        final List<String> scope = new ArrayList<>();
	        for (int i = 0; i <= random.nextInt(MAX_USELESS_STATEMENTS); i++) {
	            final StringBuilder line = new StringBuilder();
	            final String name = OBFUSING_NAMES[random.nextInt(OBFUSING_NAMES.length)];
	            if (!scope.contains(name)) {
	                line.append("int ");
	            }
	            line.append(name)
	                .append(" = ");

	            final List<String> expr = random.ints(random.nextInt(maxStatementParts) + 1, 0, 1 + scope.size())
	                        .mapToObj(x -> x % (maxStatementParts + 1) == 0
	                        ? String.valueOf(random.nextInt(100) + 1)
	                         : scope.get(x - 1))
	                        .toList();
	            for (int j = 0; j < expr.size() - 2; j++) {
	                line.append(expr.get(j))
	                    .append(" ")
	                    .append(MATH_OPS[random.nextInt(MATH_OPS.length)])
	                    .append(" ");
	            }
	            line.append(expr.get(expr.size() - 1))
	                .append(";");
	            addLine(line.toString());
	            if (!scope.contains(name)) {
	                scope.add(name);
	            }
	        }
	    }


	    String format(final String string) {
	        final StringBuilder sb = new StringBuilder();
	        for (int i = 0; i < scopes.size(); i++) {
	            sb.append(TAB);
	        }
	        return sb.append(string).toString();
	    }

	    String randomName() {
	        final Random random = new Random();
	        String name = null;
	        while (name == null) {
	            final int length = random.nextInt(MAX_OBFUSED_ID_LENGTH) + 1;
	            final int first_idx = random.nextInt(OBFUSED_ID_FIRST_CHARACTERS.length);
	            final String first = String.valueOf(OBFUSED_ID_FIRST_CHARACTERS[first_idx]);
	            final String rest = random.ints(length - 1, 0, OBFUSED_ID_CHARACTERS.length)
	                                        .mapToObj(i -> String.valueOf(OBFUSED_ID_CHARACTERS[i]))
	                                        .collect(Collectors.joining(""));
	            name = first + rest;
	        }
	        return name;
	    }



	public JavaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public String res;
		public Token ID;
		public TerminalNode CLASS() { return getToken(JavaParser.CLASS, 0); }
		public TerminalNode ID() { return getToken(JavaParser.ID, 0); }
		public TerminalNode LBRACE() { return getToken(JavaParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(JavaParser.RBRACE, 0); }
		public TerminalNode EOF() { return getToken(JavaParser.EOF, 0); }
		public List<ImportStatementContext> importStatement() {
			return getRuleContexts(ImportStatementContext.class);
		}
		public ImportStatementContext importStatement(int i) {
			return getRuleContext(ImportStatementContext.class,i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(42);
				importStatement();
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(48);
			match(CLASS);
			setState(49);
			((ProgramContext)_localctx).ID = match(ID);
			setState(50);
			match(LBRACE);

			        addLine("class " + ((ProgramContext)_localctx).ID.getText() +" {");
			        newScope();
			      
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(52);
				function();
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(58);
			match(RBRACE);
			setState(59);
			match(EOF);

			        endScope();
			        addLine("}");
			        ((ProgramContext)_localctx).res =  sb.toString();
			      
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportStatementContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(JavaParser.IMPORT, 0); }
		public ImportPathContext importPath() {
			return getRuleContext(ImportPathContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(JavaParser.SEMICOLON, 0); }
		public TerminalNode STATIC() { return getToken(JavaParser.STATIC, 0); }
		public ImportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatement; }
	}

	public final ImportStatementContext importStatement() throws RecognitionException {
		ImportStatementContext _localctx = new ImportStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(IMPORT);
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STATIC) {
				{
				setState(63);
				match(STATIC);
				}
			}

			setState(66);
			importPath();
			setState(67);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportPathContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(JavaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(JavaParser.ID, i);
		}
		public List<TerminalNode> POINT() { return getTokens(JavaParser.POINT); }
		public TerminalNode POINT(int i) {
			return getToken(JavaParser.POINT, i);
		}
		public ImportPathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importPath; }
	}

	public final ImportPathContext importPath() throws RecognitionException {
		ImportPathContext _localctx = new ImportPathContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importPath);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(ID);
			setState(74);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(70);
					match(POINT);
					setState(71);
					match(ID);
					}
					} 
				}
				setState(76);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==POINT) {
				{
				setState(77);
				match(POINT);
				setState(78);
				match(T__0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public TypeContext type;
		public Token id;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode LPARENT() { return getToken(JavaParser.LPARENT, 0); }
		public FunctionArgsContext functionArgs() {
			return getRuleContext(FunctionArgsContext.class,0);
		}
		public TerminalNode RPARENT() { return getToken(JavaParser.RPARENT, 0); }
		public TerminalNode LBRACE() { return getToken(JavaParser.LBRACE, 0); }
		public FunctionBodyContext functionBody() {
			return getRuleContext(FunctionBodyContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(JavaParser.RBRACE, 0); }
		public TerminalNode ID() { return getToken(JavaParser.ID, 0); }
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			((FunctionContext)_localctx).type = type();
			setState(82);
			((FunctionContext)_localctx).id = match(ID);
			setState(83);
			match(LPARENT);

			        add(format(((FunctionContext)_localctx).type.name));
			        add(" ");
			        add((((FunctionContext)_localctx).id!=null?((FunctionContext)_localctx).id.getText():null));
			        newScope();
			        add("(");
			    
			setState(85);
			functionArgs();
			setState(86);
			match(RPARENT);
			setState(87);
			match(LBRACE);

			        add(") {");
			        newLine();
			    
			setState(89);
			functionBody();
			setState(90);
			match(RBRACE);

			        endScope();
			        addLine("}");
			        newLine();
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementBlockContext extends ParserRuleContext {
		public String prefix;
		public TerminalNode LBRACE() { return getToken(JavaParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(JavaParser.RBRACE, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementBlockContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public StatementBlockContext(ParserRuleContext parent, int invokingState, String prefix) {
			super(parent, invokingState);
			this.prefix = prefix;
		}
		@Override public int getRuleIndex() { return RULE_statementBlock; }
	}

	public final StatementBlockContext statementBlock(String prefix) throws RecognitionException {
		StatementBlockContext _localctx = new StatementBlockContext(_ctx, getState(), prefix);
		enterRule(_localctx, 8, RULE_statementBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(LBRACE);

			        addLine(_localctx.prefix + "{");
			        newScope();
			    
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << RETURN) | (1L << IF) | (1L << LBRACE) | (1L << ID))) != 0)) {
				{
				{
				setState(95);
				statement();
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(101);
			match(RBRACE);

			        endScope();
			        addLine("}");
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionArgsContext extends ParserRuleContext {
		public VarArgContext varg;
		public FunctionArgContext farg;
		public VarArgContext varArg() {
			return getRuleContext(VarArgContext.class,0);
		}
		public List<FunctionArgContext> functionArg() {
			return getRuleContexts(FunctionArgContext.class);
		}
		public FunctionArgContext functionArg(int i) {
			return getRuleContext(FunctionArgContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(JavaParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(JavaParser.COMMA, i);
		}
		public FunctionArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionArgs; }
	}

	public final FunctionArgsContext functionArgs() throws RecognitionException {
		FunctionArgsContext _localctx = new FunctionArgsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functionArgs);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(104);
				((FunctionArgsContext)_localctx).varg = varArg();
				add(((FunctionArgsContext)_localctx).varg.arg);
				}
				break;
			case 2:
				{
				setState(107);
				((FunctionArgsContext)_localctx).farg = functionArg();
				add(((FunctionArgsContext)_localctx).farg.arg);
				setState(115);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(109);
						match(COMMA);
						setState(110);
						((FunctionArgsContext)_localctx).farg = functionArg();

						        add(", ");
						        add(((FunctionArgsContext)_localctx).farg.arg);
						     
						}
						} 
					}
					setState(117);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(118);
					match(COMMA);
					setState(119);
					((FunctionArgsContext)_localctx).varg = varArg();

					        add(", ");
					        add(((FunctionArgsContext)_localctx).varg.arg);
					}
				}

				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionArgContext extends ParserRuleContext {
		public String arg;
		public TypeContext type;
		public ObfusedIdContext obfusedId;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ObfusedIdContext obfusedId() {
			return getRuleContext(ObfusedIdContext.class,0);
		}
		public FunctionArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionArg; }
	}

	public final FunctionArgContext functionArg() throws RecognitionException {
		FunctionArgContext _localctx = new FunctionArgContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_functionArg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			((FunctionArgContext)_localctx).type = type();
			setState(127);
			((FunctionArgContext)_localctx).obfusedId = obfusedId();
			((FunctionArgContext)_localctx).arg =  ((FunctionArgContext)_localctx).type.name + " " + ((FunctionArgContext)_localctx).obfusedId.name;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarArgContext extends ParserRuleContext {
		public String arg;
		public TypeContext type;
		public ObfusedIdContext obfusedId;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ELLIPSIS() { return getToken(JavaParser.ELLIPSIS, 0); }
		public ObfusedIdContext obfusedId() {
			return getRuleContext(ObfusedIdContext.class,0);
		}
		public VarArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varArg; }
	}

	public final VarArgContext varArg() throws RecognitionException {
		VarArgContext _localctx = new VarArgContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_varArg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			((VarArgContext)_localctx).type = type();
			setState(131);
			match(ELLIPSIS);
			setState(132);
			((VarArgContext)_localctx).obfusedId = obfusedId();
			((VarArgContext)_localctx).arg =  ((VarArgContext)_localctx).type.name + "... " + ((VarArgContext)_localctx).obfusedId.name;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionBodyContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FunctionBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionBody; }
	}
